--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.37"
+    "amfe-flexible": "^2.2.1",
+    "vant": "^4.9.7",
+    "vue": "^3.4.37",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
+    "postcss": "^8.4.47",
+    "postcss-pxtorem": "^6.1.0",
     "vite": "^5.4.1"
   }
 }
