--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^1.7.7",
     "vant": "^4.9.7",
     "vue": "^3.4.37",
     "vue-router": "4"
