--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "postcss": "^8.4.47",
     "postcss-pxtorem": "^6.1.0",
     "vite": "^5.4.1"
